--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
         <li><a href="mailto:{{ site.email }}">Contact</a></li>
         {% endif %}
 
-        {% if site.gitlab_username %}
-        <li><a target="_blank" rel="external" href="https://gitlab.in2p3.fr/{{ site.gitlab_username }}">GitLab</a></li>
+        {% if site.github_username %}
+        <li><a target="_blank" rel="external" href="https://github.com/{{ site.github_username }}">GitHub</a></li>
         {% endif %}
 
         {% if site.twitter_username %}
